--- a/package.json
+++ b/package.json
@@ -9,10 +9,9 @@
   "author": "",
   "license": "MIT",
   "scripts": {
-    "build": "pnpm run clean && tsc && pnpm run copy-assets",
-    "copy-assets": "cp manifest.json dist/ && cp -r public/* dist/",
-    "watch": "tsc --watch",
-    "clean": "rm -rf dist",
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview",
     "typecheck": "tsc --noEmit",
     "test": "echo \"No tests yet.\" && exit 0",
     "prepare": "husky"
@@ -22,6 +21,8 @@
     "@commitlint/config-conventional": "^19.6.0",
     "@types/chrome": "^0.1.14",
     "husky": "^9.1.7",
-    "typescript": "^5.9.2"
+    "typescript": "^5.9.2",
+    "vite": "^7.1.7",
+    "vite-plugin-web-extension": "^4.4.5"
   }
 }
