--- a/public/manifest.json
+++ b/public/manifest.json
@@ -16,13 +16,13 @@
     "default_icon": "assets/icons/icon128.png"
   },
   "background": {
-    "service_worker": "background.js",
+    "service_worker": "src/background.ts",
     "type": "module"
   },
   "content_scripts": [
     {
       "matches": ["<all_urls>"],
-      "js": ["content.js"],
+      "js": ["src/content.ts"],
       "run_at": "document_start",
       "all_frames": false
     }
